--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Profilecard</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <img src="media/boondocts.jpg" alt="" class="profile-pic" />
+      <div class="text">
+        <h1 class="name">David Adams</h1>
+        <p class="summary">
+          Hello my name is David adams i am a frontend developer hoping to
+          further develop my skills to become a full stack developer
+        </p>
+        <div class="social-links">
+          <a href=""
+            ><img
+              src="media/X (formerly Twitter)_light.svg"
+              alt=""
+              class="links-icon"
+            />
+            <p class="link-text">twitter</p>
+          </a>
+          <a href=""
+            ><img src="media/github.svg" alt="" class="links-icon" />
+            <p class="link-text">github</p>
+          </a>
+          <a href=""
+            ><img src="media/gmail.svg" alt="" class="links-icon" />
+            <p class="link-text">gmail</p>
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
